--- a/app/sass/_1_section.sass
+++ b/app/sass/_1_section.sass
@@ -296,12 +296,28 @@
         img
             max-width: 240px
 
+@media (max-width: 925px)
+    .iphone__block
+        img
+            max-width: 168%
+            top: 4%
+            transform: rotate(-18deg)
+            right: 30px
+
 
 @media (max-width: 900px)
     .carousel__block
         padding: 50px 0
     .carousel__text
         max-width: 350px
+
+
+@media (max-width: 810px)
+    .iphone__block
+        img
+            max-width: 160%
+            top: 9%
+            transform: rotate(-18deg)
 
 @media (max-width: 770px)
     .love__inner
@@ -331,6 +347,8 @@
         background-color: #f3f5f8
         margin: 0 auto
         box-shadow: none
+        max-width: 800px
+        width: inherit
     .dots-c
         display: none
 
@@ -360,6 +378,7 @@
         padding-top: 15px
 
 
+
 @media (max-width: 575px)
     .nav.active
         opacity: 0.97
@@ -387,7 +406,9 @@
     .nature__inner
         padding: 40px 0 120px
 
-
+@media (max-width: 380px)
+    .carousel__block
+        margin: 0 20px
 
 
 
