--- a/app/sass/_2_ignite.sass
+++ b/app/sass/_2_ignite.sass
@@ -250,6 +250,8 @@
         padding: 60px 0 45px
     .team__inner
         padding-top: 35px
+
+
     .subscribe__input
         width: 295px
         margin-bottom: 5px
@@ -262,16 +264,27 @@
         margin-top: 75px
         left: 43%
 
+
     .contacts
         display: block
         margin: 50px 0
     .contacts__cards
-        margin: 0 auto
+        margin: 0 auto 30px
         max-width: 100%
     .social__item2
         margin-bottom: 50px
     .container-footer
+        text-align: center
         display: block
+        width: 100%
+    .content
+        display: block
+        width: 100%
+        margin: 10px 0
+    .designed
+        padding: 30px 0
+    .footer
+        padding: 60px 0 0
 
 
 
